 - Qt: Redo GameController into multiple classes
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Implement display start DMAs
 - Qt: Prevent window from being created off-screen
 - Qt: Add option to disable FPS display

0.6.1: (2017-10-01)
Bugfixes:
 - GB, GBA: Fix crashes when attempting to identify null VFiles
 - GB, GBA: Fix sync to video with frameskip
 - GB, GBA Savedata: Fix savestate-related save overwriting (fixes mgba.io/i/834)
 - GB Audio: Fix NRx2 writes while active (fixes mgba.io/i/866)
 - GB Core: Fix palette loading when loading a foreign config
 - GB MBC: Pocket Cam memory should be accessible without enabling
 - GB MBC: Fix SRAM sizes 4 and 5
 - GB MBC: Fix RTC initialization (fixes mgba.io/i/825)
 - GB MBC: Fix RTC loading when file size is off
 - GB Memory: Initialize peripheral pointers
 - GB Memory: Prevent accessing empty SRAM (fixes mgba.io/i/831)
 - GB Memory: Fix HDMA count starting in mode 0 (fixes mgba.io/i/855)
 - GB Memory: Actually load latch time from savestate
 - GB Serialize: Fix deserializing video STAT
 - GB Video: Fix 16-bit screenshots (fixes mgba.io/i/826)
 - GB Video: Fix potential hang when ending mode 0
 - GB Video: Fix read mode when enabling LCD
 - GBA: Reset active region as needed when loading a ROM
 - GBA: Fix keypad IRQs not firing when extra buttons are pressed
 - GBA BIOS: Use core's VRAM variable instead of renderer's
 - GBA Cheats: Fix PARv3 multiline blocks (fixes mgba.io/i/889)
 - GBA I/O: Fix reading from a few invalid I/O registers (fixes mgba.io/i/876)
 - GBA Savedata: Fix 512 byte EEPROM saving as 8kB (fixes mgba.io/i/877)
 - GBA Savedata: Fix size of SRAM saves (fixes mgba.io/i/883)
 - GBA Video: Fix broken sprite blending hack (fixes mgba.io/i/532)
 - Python: Fix importing .gb or .gba before .core
 - Qt: Fix command line debugger closing second game
 - Qt: Fix LOG argument order